# neuralHemangiomas

./: .gitignore  CMakeLists.txt  HM_recognition_project.ipynb  LICENSE  README.md  requirements.txt
data/train/No_HM/: Копия Копия Копия Копия melanoma4.jfif
lib/: CMakeLists.txt  neu.cpp
lib/include/: neu.hpp
src/: main.py  neu.py
test/: CMakeLists.txt  main.cpp
